@@ -19,9 +19,7 @@
 #include "libs/sound/trackint.h"
 #include "libs/log.h"
 #include "comm.h"
-#include "sis.h"
 #include "options.h"
-#include <assert.h>
 #include <ctype.h>
 #include <stdlib.h>
 
@@ -819,179 +817,6 @@ FastForward_Page ()
 		}
 	}
 	return TRUE;
-}
-
-// processes sound data to oscilloscope
-int
-GetSoundData (void *data) 
-{
-	// XXX: These two variants are begging to be merged
-	if (speechVolumeScale != 0.0f)
-	{
-		// speech is enabled
-
-		LockMutex (soundSource[SPEECH_SOURCE].stream_mutex);
-		if (soundSource[SPEECH_SOURCE].sample && soundSource[SPEECH_SOURCE].sample->decoder && 
-			PlayingStream (SPEECH_SOURCE) && soundSource[SPEECH_SOURCE].sbuffer && 
-			soundSource[SPEECH_SOURCE].sbuf_size > 0)
-		{
-			float played_time = (GetTimeCounter () - soundSource[SPEECH_SOURCE].sbuf_lasttime) / 
-				(float)ONE_SECOND;
-			long delta = (int) (played_time * (float)soundSource[SPEECH_SOURCE].
-				sample->decoder->frequency * 2.0f);
-			unsigned long pos;
-			int i;
-			int step;
-			UBYTE *scopedata = (UBYTE *) data;
-			UBYTE *sbuffer = soundSource[SPEECH_SOURCE].sbuffer;
-
-			assert (soundSource[SPEECH_SOURCE].sample->decoder->frequency >= 11025);
-			assert (soundSource[SPEECH_SOURCE].sample->decoder->format == audio_FORMAT_MONO16);
-
-			// Using step of 1 sample at 11025Hz, because the human speech
-			// is mostly in the low frequencies
-			step = soundSource[SPEECH_SOURCE].sample->decoder->frequency * 2 / 11025;
-			step = (step + 1) & ~1;
-
-			if (delta < 0)
-			{
-				log_add (log_Debug, "GetSoundData(): something's messed"
-						" with timing, delta %ld", delta);
-				delta = 0;
-			}
-			else if (delta > (int)(soundSource[SPEECH_SOURCE].sbuf_size * 2))
-			{
-#if 0
-				log_add (log_Debug, "GetSoundData(): something's messed"
-						" with timing, delta %d", delta);
-#endif
-				delta = 0;
-			}
-#if 0
-			log_add (log_Debug, "played_data %d total_decoded %d delta %d",
-					played_data, soundSource[SPEECH_SOURCE].total_decoded,
-					delta);
-#endif
-			pos = soundSource[SPEECH_SOURCE].sbuf_offset + delta;
-			if (pos % 2 == 1)
-				pos++;
-
-			// pos is an unsigned data type; this assertion cannot fail!
-			// assert (pos >= 0);
-
-			for (i = 0; i < RADAR_WIDTH - 2; ++i)
-			{
-				SDWORD s;
-
-				for (;;)
-				{
-					if (pos >= soundSource[SPEECH_SOURCE].sbuf_size)
-						pos = pos - soundSource[SPEECH_SOURCE].sbuf_size;
-					else
-						break;
-				}
-
-				s = *(SWORD*) (&sbuffer[pos]);
-				s = (s / 1360) + (RADAR_HEIGHT >> 1);
-				if (s < 1)
-					s = 1;
-				else if (s > RADAR_HEIGHT - 2)
-					s = RADAR_HEIGHT - 2;
-				scopedata[i] = (UBYTE) s;
-
-				pos += step;
-			}
-
-			UnlockMutex (soundSource[SPEECH_SOURCE].stream_mutex);
-			return 1;
-		}
-		UnlockMutex (soundSource[SPEECH_SOURCE].stream_mutex);
-	}
-	else if (musicVolumeScale != 0.0f)
-	{
-		// speech is disabled but music is not so process it instead
-
-		LockMutex (soundSource[MUSIC_SOURCE].stream_mutex);
-		if (soundSource[MUSIC_SOURCE].sample && soundSource[MUSIC_SOURCE].sample->decoder && 
-			PlayingStream (MUSIC_SOURCE) && soundSource[MUSIC_SOURCE].sbuffer && 
-			soundSource[MUSIC_SOURCE].sbuf_size > 0)
-		{
-			float played_time = (GetTimeCounter () - soundSource[MUSIC_SOURCE].sbuf_lasttime) / 
-				(float)ONE_SECOND;
-			int delta = (int) (played_time * (float)soundSource[MUSIC_SOURCE].
-				sample->decoder->frequency * 4.0f);
-			unsigned long pos;
-			int i, step;
-			UBYTE *scopedata = (UBYTE *) data;
-			UBYTE *sbuffer = soundSource[MUSIC_SOURCE].sbuffer;
-
-			assert (soundSource[MUSIC_SOURCE].sample->decoder->frequency >= 11025);
-			assert (soundSource[MUSIC_SOURCE].sample->decoder->format == audio_FORMAT_STEREO16);
-
-			// Using step of 4 samples at 11025Hz for the music
-			step = soundSource[MUSIC_SOURCE].sample->decoder->frequency / 11025 * 16;
-			if (step % 2 == 1)
-				step++;
-
-			if (delta < 0)
-			{
-#if 0				
-				log_add (log_Debug, "GetSoundData(): something's messed"
-						" with timing, delta %d", delta);
-#endif
-				delta = 0;
-			}
-			else if (delta > (int)(soundSource[MUSIC_SOURCE].sbuf_size * 2))
-			{
-#if 0				
-				log_add (log_Debug, "GetSoundData(): something's messed"
-						" with timing, delta %d", delta);
-#endif
-				delta = 0;
-			}
-#if 0			
-			log_add (log_Debug, "played_data %d total_decoded %d delta %d",
-					played_data, soundSource[MUSIC_SOURCE].total_decoded,
-					delta);
-#endif
-			pos = soundSource[MUSIC_SOURCE].sbuf_offset + delta;
-			if (pos % 2 == 1)
-				pos++;
-
-			// pos is an unsigned type; this assertion cannot fail!
-			// assert (pos >= 0);
-
-			for (i = 0; i < RADAR_WIDTH - 2; ++i)
-			{
-				SDWORD s;
-
-				for (;;)
-				{
-					if (pos >= soundSource[MUSIC_SOURCE].sbuf_size)
-						pos = pos - soundSource[MUSIC_SOURCE].sbuf_size;
-					else
-						break;
-				}
-
-				s = (*(SWORD*)(&sbuffer[pos])) + (*(SWORD*)(&sbuffer[pos + 2]));
-				
-				s = (s / 1800) + (RADAR_HEIGHT >> 1);
-				if (s < 1)
-					s = 1;
-				else if (s > RADAR_HEIGHT - 2)
-					s = RADAR_HEIGHT - 2;
-				scopedata[i] = (UBYTE) s;
-
-				pos += step;
-			}
-
-			UnlockMutex (soundSource[MUSIC_SOURCE].stream_mutex);
-			return 1;
-		}
-		UnlockMutex (soundSource[MUSIC_SOURCE].stream_mutex);
-	}
-
-	return 0;
 }
 
 // tells current position of streaming speech
